<resources>
    <string name="app_name">10086APP</string>
    <string name="welcoming">嗨，你好！</string>
    <string name="querytime">查询时间：08/02 14:10</string>
    <string name="refresh">刷新</string>
    <string name="myaccount"><![CDATA[我的账户>]]></string>
    <string name="find">发现</string>
    <string name="live">直播</string>
    <string name="service">客服</string>
    <string name="home">首页</string>
    <string name="add_other_card">添加其他卡片</string>
    <string name="home_card">首页卡片</string>
    <string name="drag_sort">按住拖动调整排序</string>
    <string name="done">完成</string>
</resources>
