<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/gray" >


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:id="@+id/subscribe_main_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/subscribe_bg"
            android:orientation="vertical"
            android:paddingBottom="14.0dip">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="24dp"
                android:layout_marginLeft="10.0dip"
                android:layout_marginTop="14.0dip"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/my_category_text"
                    style="@style/subscribe_my_tip_text"
                    android:text="@string/home_card" />

                <TextView
                    android:id="@+id/my_category_tip_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="78dp"
                    android:gravity="center"
                    android:text="@string/drag_sort"
                    android:textColor="@color/subscribe_item_text_color_pressed"
                    android:textSize="11.0sp" />

                <TextView
                    android:id="@+id/cardactivity_done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_alignParentEnd="true"
                    android:text="@string/done"
                    android:textColor="@color/bluelight"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <View
                android:id="@+id/seperate_line"
                style="@style/subscribe_seperate_line" />

            <chinamobile.com.a10086app.View.DragGrid
                android:id="@+id/userGridView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dip"
                android:layout_marginRight="14dip"
                android:gravity="center"
                android:horizontalSpacing="14dip"
                android:listSelector="@android:color/transparent"
                android:numColumns="3"
                android:scrollbars="vertical"
                android:stretchMode="columnWidth"
                android:verticalSpacing="14.0px" />

            <View
                android:id="@+id/seperate_line2"
                style="@style/subscribe_seperate_line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/more_category_text"
                    style="@style/subscribe_more_tip_text"
                    android:layout_marginBottom="14.0dip"
                    android:layout_marginLeft="10.0dip"
                    android:text="@string/add_other_card" />
            </RelativeLayout>


            <chinamobile.com.a10086app.View.OtherGridView
                android:id="@+id/otherGridView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dip"
                android:layout_marginRight="14dip"
                android:gravity="center"
                android:horizontalSpacing="14dip"
                android:listSelector="@android:color/transparent"
                android:numColumns="3"
                android:scrollbars="vertical"
                android:stretchMode="columnWidth"
                android:verticalSpacing="14.0px" />
        </LinearLayout>
    </ScrollView>

  <!--  <include
        android:id="@+id/category_layout"
        layout="@layout/subscribe_category_item"
        android:visibility="gone" />-->

</RelativeLayout>