<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity">
    //最外层滑动

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="56dp">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="@color/gray"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/blue">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/toolbar_usericon"
                        android:layout_width="42dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/iconboy" />

                    <TextView
                        android:id="@+id/toolbar_welcoming"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="59dp"
                        android:text="@string/welcoming"
                        android:textColor="@color/white"
                        android:textSize="16dp" />

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/toolbar_message"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="60dp"
                        android:src="@drawable/alarm" />

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/toolbar_myinfo"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/account" />

                </RelativeLayout>

            </android.support.v7.widget.Toolbar>
            //刷新

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/text_querytime"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:text="@string/querytime"
                    android:textSize="14dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="4dp"
                    android:layout_toEndOf="@+id/text_querytime"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:src="@drawable/refresh" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/refresh"
                        android:textColor="@color/bluelight"
                        android:textSize="14dp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="16dp"
                    android:text="@string/myaccount"
                    android:textSize="14dp" />

            </RelativeLayout>
            //卡片

          <android.support.v7.widget.RecyclerView
              android:id="@+id/recyclerview_card"
              android:layout_width="wrap_content"
              android:layout_height="180dp"
              android:layout_marginTop="8dp">

          </android.support.v7.widget.RecyclerView>

            //业务模块

            <GridView
                android:id="@+id/grideview_business"
                android:layout_width="match_parent"
                android:layout_height="195dp"
                android:layout_marginTop="4dp"
                android:columnWidth="85dp"
                android:numColumns="4"
                android:overScrollMode="never"
                android:background="@color/white"
                android:stretchMode="spacingWidthUniform"></GridView>
            //广告橱窗

            <com.youth.banner.Banner xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="4dp" />
            //新闻列表

            <RelativeLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerview_news"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="#ffff0000"
                    android:fillViewport="true"
                    android:overScrollMode="never" />
            </RelativeLayout>
        </android.support.v7.widget.LinearLayoutCompat>

    </ScrollView>
    <android.support.design.widget.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:id="@+id/BottomTab"
        android:background="#e4e4e4"
        app:menu="@menu/bottom_menu"
        />
</android.widget.RelativeLayout>